# word_count3

./: .gitignore  CMakeLists.txt  README.md
data_in/nested_files/: data1.txt  data2.txt
inc/: read_write.hpp  t_queue.h  time.hpp
lib/: read_write.cpp
src/: main.cpp
